Changes
=======

2.9 (unreleased)
----------------

- The ``skin`` option of ``grokcore.view.util.url`` now accepts
  strings that will be used as skin name as possible alternative to a
  skin interface.


2.8 (2012-12-11)
----------------

- Add a ``skin=[skin component]`` argument to the ``grokcore.view.util.url()``
  function and ``grokcore.view.components.View.url`` method. This allows for
  computing URLs on a specific skin. Note that it is not verified whether
  the computed URL actually exist on the specified skin.

2.7 (2012-05-01)
----------------

- Use the component registration api in grokcore.component.

- Improve error message when a templatedir() directive points to a non-
  existent directory. (fix launchpad issue 680528).

- Improve error message when a template is required for a component
  but cannot be found (Fix Launchpad issue #225855, #242698).

- Fix how the static resource are found. Instead of using as name the
  package name where the component is defined, using as name the
  package where the template for the component is defined, or the base
  component. This is done by setting an attribute ``__static_name__``
  on the component that specify which resource directory should be
  used. This fix missing resources when you extend the component and
  don't redefined the template.

2.6.1 (2011-06-28)
------------------

- Fix bug where zope.browserpage was not correctly declared as a dependency.

2.6 (2011-06-28)
----------------

- Add the ContentProvider component.

2.5 (2011-04-04)
----------------

- Fix a test that relied on older zope.testbrowser behaviour.

2.4 (2011-03-01)
----------------

- grok.View component can optionally use the ``grok.provides`` directive,
  specifying an interface that the component provides (instead of the
  zope.interface.Interface that views by default provide).

- Add a new ZCML directive, ``ignoreTemplates`` that let you configure which